@startuml
left to right direction
skinparam classAttributeIconSize 0

class User {
  - full_name : String
  - email : String
  - password : String
  - role : enum<seller, admin>
}

class Country {
  - name : String
  - currency_code : String
  - currency_name : String
}

class Seller {
  - description : String
  - whatsapp : String
  - telegram : String
}

class Announcement {
  - title : String
  - description : String
  - price : decimal
  - followers : int
  - account_created_at : date
  - status : enum<active, sold, inactive>
  - created_at : timestamp
}

class Category {
  - name : String
}

class SystemConfig {
  - ad_script_header : Text
  - ad_script_sidebar : Text
  - ad_script_footer : Text
  - is_ads_enabled : Boolean
}

' العلاقات

' كل Seller مرتبط بمستخدم واحد
User "1" <|-- "1" Seller : profile >

' كل Seller ينتمي لدولة واحدة
Country "1" -- "0..*" Seller : belongs to >

' بائع واحد يملك عدة إعلانات
Seller "1" -- "0..*" Announcement : creates >

' تصنيف واحد يضم عدة إعلانات
Category "1" -- "0..*" Announcement : contains >

note right of SystemConfig
  يحتوي إعدادات عامة للنظام
  مثل أكواد Google AdSense
  يتم تعديلها من لوحة تحكم الأدمن
end note

@enduml